# revisedoc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/revisedoc/: __init__.py  cli.py  editor.py  mcp.py
tests/: conftest.py  test_revisedoc.py
