[project]
name = "revisedoc"
version = "0.1.0"
authors = [{ name = "Vlad Shurupov" }]
description = "Edit .docx files with tracked changes, comments, and revision restoration — for humans and AI agents"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "lxml>=5.0.0",
]
[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0.0"]

[project.urls]
homepage = "https://github.com/algodesigner/revisedoc"
issues = "https://github.com/algodesigner/revisedoc/issues"

[project.scripts]
revisedoc = "revisedoc.cli:main"
revisedoc-mcp = "revisedoc.mcp:main"

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
